<resources>
    <string name="app_name">Movie App</string>
    <string name="trending_now">Trending Now</string>
    <string name="see_all">See all</string>
    <string name="trending_tv_series">Trending Tv Series</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="tv_series_poster">Tv series poster</string>
    <string name="movie_poster">Movie poster</string>
    <string name="home">Home</string>
    <string name="overview">Overview</string>
    <string name="back_button">Back button</string>
    <string name="add_to_watch_list_button">Add to watch list button</string>
    <string name="delete_from_watch_list_button">Delete from watch list button</string>
    <string name="vote">%1$s (%2$s)</string>
    <string name="plus_18">18+</string>
    <string name="for_everyone">For everyone</string>
    <string name="in_production">In production</string>
    <string name="end">End</string>
    <string name="cast_profile_picture">Cast profile picture</string>
    <string name="casts">Casts</string>
    <string name="movies">Movies</string>
    <string name="read_more">Read more…</string>
    <string name="actor_image">Actor image</string>
    <string name="tv_series">Tv Series</string>
    <string name="read_less">Read less</string>
    <string name="search">Search…</string>
    <string name="poster">Poster</string>
    <string name="genres">Genres</string>
    <string name="profile">Profile</string>
    <string name="watch_later_movies">Watch Later Movies</string>
    <string name="watch_later_tv_series">Watch Later Tv Series</string>
    <string name="you_haven_t_added_a_movie_yet">You haven\'t added a movie yet.</string>
    <string name="you_haven_t_added_a_series_yet">You haven\'t added a series yet.</string>
    <string name="watch_list_movies">Watch List Movies</string>
    <string name="watch_list_tv_series">Watch List Tv Series</string>
    <string name="error_network">A network error has occurred! Please try again.</string>
</resources>