<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.castdetail.CastDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:visibility="gone"
                tools:text="Error!" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:shimmer_duration="800">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/shimmer_trending_banner_movies" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/ibBack"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_image_btn"
                    android:contentDescription="@string/back_button"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/white" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ibBack"
                    app:strokeColor="@color/text_color"
                    app:strokeWidth="3dp">

                    <ImageView
                        android:id="@+id/ivActorImage"
                        android:layout_width="200dp"
                        android:layout_height="300dp"
                        android:contentDescription="@string/actor_image"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvActorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Actor Name" />

            <TextView
                android:id="@+id/tvBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                tools:text="1967-06-20" />

            <TextView
                android:id="@+id/tvActorBiography"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:ellipsize="end"
                android:maxLines="4"
                android:textColor="@color/hint_color"
                android:textSize="17sp"
                tools:text="Nicole Mary Kidman AC (born June 20, 1967) is an American-Australian actress and producer. Known for her work across various film and television productions from several genres, she has consistently ranked among the world's highest-paid actresses. She is the recipient of numerous accolades, including an Academy Award, a British Academy Film Award, two Primetime Emmy Awards and six Golden Globe Awards.\n\nKidman began her acting career in Australia with the 1983 films Bush Christmas and BMX Bandits. Her breakthrough came in 1989 with the thriller film Dead Calm and the miniseries Bangkok Hilton. In 1990, she achieved international success with the action film Days of Thunder. She received greater recognition with lead roles in Far and Away (1992), Batman Forever (1995), To Die For (1995) and Eyes Wide Shut (1999). For her portrayal of writer Virginia Woolf in the drama The Hours (2002), Kidman won the Academy Award for Best Actress. She received additional Academy Award nominations for her roles in the musical Moulin Rouge! (2001) and the dramas Rabbit Hole (2010), Lion (2016) and Being the Ricardos (2021).\n\nKidman's television roles include Hemingway Gellhorn (2012), Big Little Lies (2017–2019), Top of the Lake: China Girl (2017), The Undoing (2020) and Nine Perfect Strangers (2021). For Big Little Lies, she received two Primetime Emmy Awards, one for Outstanding Lead Actress and the other for Outstanding Limited Series as an executive producer.\n\nKidman has served as a Goodwill Ambassador for UNICEF since 1994 and for UNIFEM since 2006. In 2006, she was appointed Companion of the Order of Australia. She was married to actor Tom Cruise from 1990 to 2001 and has been married to country music singer Keith Urban since 2006. In 2010, she founded the production company Blossom Films. In 2004 and 2018, Time magazine included her on its list of the 100 most influential people in the world, and in 2020, The New York Times named her one of the greatest actors of the 21st century.\n\nDescription above from the Wikipedia article Nicole Kidman, licensed under CC-BY-SA, full list of contributors on Wikipedia." />

            <TextView
                android:id="@+id/tvReadMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/read_more"
                android:textAlignment="textEnd"
                android:textColor="#0090FF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/movies"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/tvTvSeries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/tv_series"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTvSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>